-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0
-
None
-
14f09643441cc2938dc2791e790f6309ab12cb1d
auto inf = std::numeric_limits<double>::infinity();
auto neginf = -1 * inf;
assert(inf != neginf);
QVariant a(inf);
QVariant b(neginf);
assert(a != b);
The second assertion fails, but IMHO it shouldn't. It all gets down to qFuzzyCompare(), which returns true for this case.
There is a QTBUG-50036, that is somewhat similar and might have caused this issue.